cp/k8s_devdeploy.yml
apiVersion: v1
kind: Namespace
metadata:
  name: colis-dev
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: c3mweb-cp
  namespace: colis-dev
  labels:
    app: c3mweb-cp
spec:
  replicas: 3 #We always want more than 1 replica for HA
  selector:
    matchLabels:
      app: c3mweb-cp
  template:
    metadata:
      labels:
        app: c3mweb-cp
    spec:
      containers:
        - name: c3mweb-cp #1st container
          image: tidusant/c3mweb-cp:latest #Dockerhub image
          ports:
            - containerPort: 80 #Exposes the port of the container
          livenessProbe:
            httpGet:
              path: /
              port: 80
              # httpHeaders:
              # - name: Custom-Header
              #   value: Awesome test test
            initialDelaySeconds: 3
            periodSeconds: 3
---
kind: Service
apiVersion: v1
metadata:
  name: c3mweb-cp-service
  namespace: colis-dev
spec:
  type: NodePort
  selector:
    app: c3mweb-cp
  ports:
    - name: c3mweb-cp-port
      protocol: TCP
      port: 80
      nodePort: 30080 #must be between 30000 - 32767
