cp/istio_devdeploy.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: colis-dev-gateway
  namespace: colis-dev
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: colis-dev-vsvc
  namespace: colis-dev
spec:
  hosts:
  - "*"
  gateways:
  - colis-dev-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: c3mweb-cp-service
        port:
          number: 80
    - uri:
        prefix: /api/
    route:
    - destination:
        host: c3m-api-service
        port:
          number: 8081
    - uri:
        prefix: /lptest/
    route:
    - destination:
        host: c3m-lptest-service
        port:
          number: 8082
    - uri:
        prefix: /wapi/
    route:
    - destination:
        host: c3m-wapi-service
        port:
          number: 8083
    - uri:
        prefix: /lpmin/
    route:
    - destination:
        host: c3mweb-lpmin-service
        port:
          number: 8090
